dejando todo listo